# orb-trading-app

./: .env.example  .gitignore  LICENSE  README.md  launch_dashboard.cmd  pyproject.toml  requirements.txt  streamlit_app.py
.claude/: settings.json
.github/workflows/: ci.yml
.streamlit/: config.toml
docs/: ORB_RULES.md  RESULTS.md  SPEC.md
scripts/: baseline.py  install_scheduled_scan.ps1  live_monitor.py  optimize.py  scan_signals.py  telegram_setup.py  uninstall_scheduled_scan.ps1
src/orb/: __init__.py  backtest.py  config.py  data.py  filters.py  live.py  ma_crossover.py  metrics.py  notify.py  optimize.py  signals.py  strategy.py  stream.py  webapp.py
tests/: synthetic.py  test_backtest.py  test_filters.py  test_live.py  test_ma_crossover.py  test_metrics.py  test_notify.py  test_optimize.py  test_signals.py  test_smoke.py  test_strategy.py  test_stream.py  test_webapp.py
