[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "orb-trading-app"
version = "0.2.0"
description = "Opening Range Breakout backtesting and paper-trading signal app (US equities)."
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
ui = ["streamlit>=1.30"]

[tool.setuptools.packages.find]
where = ["src"]
